--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CharactersListItemActivity"></activity>
-        <activity android:name=".RandomCharacterActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.CharactersListItemActivity"></activity>
+        <activity android:name=".view.RandomCharacterActivity" />
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
