--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,9 +54,14 @@ dependencies {
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
     //Dagger
     kapt 'com.google.dagger:dagger-compiler:2.19'
-    implementation 'com.google.dagger:dagger:2.19'
+    implementation 'com.google.dagger:dagger:2.24'
+
+    //RX
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 }
